--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap");
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -13,11 +12,19 @@
   );
   --card-shadow: 0px 20px 100px -10px rgba(66, 71, 91, 0.1);
 }
-
+.buttonContact{
+  background: rgb(217,173,124);
+  background: linear-gradient(340deg, rgba(217,173,124,0.9794292717086834) 0%, rgba(217,173,124,1) 11%, rgba(217,173,124,0.8673844537815126) 45%, rgba(217,173,124,0.2539390756302521) 86%);
+}
+.footercard{
+  background-color: #d9ad7c;
+}
 * {
   scroll-behavior: smooth;
 }
-
+.bgpage{
+  background-color: #FAEBD7;
+}
 .text-gradient {
   background: radial-gradient(
     64.18% 64.18% at 71.16% 35.69%,
