--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,12 @@
+
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
 
 :root {
   --black-gradient: linear-gradient(
@@ -18,33 +22,6 @@
   scroll-behavior: smooth;
 }
 
-.text-gradient {
-  background: radial-gradient(
-    64.18% 64.18% at 71.16% 35.69%,
-    #def9fa 0.89%,
-    #bef3f5 17.23%,
-    #9dedf0 42.04%,
-    #7de7eb 55.12%,
-    #5ce1e6 71.54%,
-    #33bbcf 100%
-  );
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-clip: text;
-  text-fill-color: transparent;
-}
-
-.bg-blue-gradient {
-  background: linear-gradient(
-    157.81deg,
-    #def9fa -43.27%,
-    #bef3f5 -21.24%,
-    #9dedf0 12.19%,
-    #7de7eb 29.82%,
-    #5ce1e6 51.94%,
-    #33bbcf 90.29%
-  );
-}
 
 .bg-black-gradient {
   background: linear-gradient(
@@ -124,17 +101,24 @@
   background: var(--black-gradient);
 }
 
-.blue__gradient {
-  background: linear-gradient(180deg, rgba(188, 165, 255, 0) 0%, #214d76 100%);
-  filter: blur(123px);
+.bg-orange-gradient {
+  background: linear-gradient(
+    157.81deg,
+    #fad9bf -43.27%,
+    #ffb385 -21.24%,
+    #ff914e 12.19%,
+    #ff7823 29.82%, 
+    #ff6b0f 51.94%, 
+    #ff7620 90.94%
+  )
 }
 
-.pink__gradient {
+.pink_gradient {
   background: linear-gradient(90deg, #f4c4f3 0%, #fc67fa 100%);
   filter: blur(900px);
 }
 
-.white__gradient {
+.white_gradient {
   background: rgba(255, 255, 255, 0.6);
   filter: blur(750px);
 }
